Fixed spacing of content elements (WWW-1522)

--- a/Resources/Private/Sass/Sections/_centercontent.scss
+++ b/Resources/Private/Sass/Sections/_centercontent.scss
@@ -5,6 +5,9 @@
 	//@include adjust-font-size-to($base-font-size * 1.2);
 	font-size: 1.2em;
 	line-height: 1.8em;
+	.csc-default {
+		margin-bottom: 24px;
+	}
 	&.fullwidth {
 		width: 76%;
 	}
