--- a/Resources/Private/Sass/main.scss
+++ b/Resources/Private/Sass/main.scss
@@ -37,15 +37,6 @@
 
 //@import "Sections/_responsive";
 
-// Abstaende Startseite ohne Newsmodul WWW-1057
-#page-1 {
-	#centercontent {
-		.csc-default {
-			margin-bottom: 24px;
-		}
-	}
-}
-
 #dataTable{
 	.odd {
 		background-color: $lightgrey;
